<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="vertical" android:gravity="center_horizontal|center_vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">
        <ImageView
            android:id="@+id/overflow_menu_silencer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_menuoverflow_material"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true" />
    </RelativeLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="24" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/durationSpinner"
        android:background="@drawable/custom_spinner_background"
        android:padding="10dp"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/customDurationText"
        android:visibility="visible"
        android:textAppearance="?android:textAppearanceMedium"
        android:layout_centerHorizontal="true"
        android:text="2 hours 24 minutes"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/silenceModeSpinner"
        android:layout_marginBottom="45dp"
        android:padding="10dp"
        android:background="@drawable/custom_spinner_background"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:id="@+id/silence_go"
        android:src="@mipmap/ic_go"
        android:adjustViewBounds="false"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="24" />

</LinearLayout>