<resources>
    <string name="app_name">Silencer</string>
    <string name="toast_text">Alerts will be silenced for %s</string>
    <string name="silence_for_text">Silence alerts for %s</string>
    <string name="silence_button">Silence</string>
    <string name="or">... or silence for...</string>
    <string name="min_15">15 minutes</string>
    <string name="min_30">30 minutes</string>
    <string name="min_60">1 hour</string>
    <string name="min_75">1 hour 15 minutes</string>
    <string name="min_90">1 hour and half</string>
    <string name="min_120">2 hours</string>
    <string name="min_150">2 and a half hours</string>
    <string name="min_180">3 hours</string>
    <string name="min_240">4 hours</string>
    <string name="min_300">5 hours</string>
    <string name="min_360">6 hours</string>
    <string name="min_420">7 hours</string>
    <string name="min_480">8 hours</string>
    <string name="min_custom">Custom time</string>
    <string name="vibro_mode">Vibration mode</string>
    <string name="silent_mode">Do not disturb</string>
    <string name="enable_sticky_notification">Sticky notification</string>
    <string name="text_for_sticky_notification">Show sticky notification with controls</string>
    <string name="notification_title">Silence notifications for 30 minutes</string>
</resources>
